--- a/.insomnia/Request/req_8ab52147f9c94c7cace29b7d8ab7b53a.yml
+++ b/.insomnia/Request/req_8ab52147f9c94c7cace29b7d8ab7b53a.yml
@@ -1,21 +1,21 @@
-_id: req_fb7cd5c018f64ab2aef8b8a68819a102
+_id: req_8ab52147f9c94c7cace29b7d8ab7b53a
 type: Request
 parentId: fld_17c96662bfd94e0a9debfaf9b82739fe
-modified: 1668596218790
-created: 1668526989878
-url: http://localhost:3000/api/login
-name: Login
+modified: 1669195513688
+created: 1669195509488
+url: http://localhost:3000/api/fundings/count
+name: "Get: Count fundings "
 description: ""
-method: POST
+method: GET
 body:
-  mimeType: application/json
-  text: '{"email":"p.feldgrill@gmail.com","password":"12345678"}'
+  mimeType: multipart/form-data
+  params: []
 parameters: []
 headers:
   - name: Content-Type
-    value: application/json
+    value: multipart/form-data
 authentication: {}
-metaSortKey: -1668526583430
+metaSortKey: -1661148274703.5938
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
