--- a/.insomnia/Request/req_67969673e4b845b1862cee89ed3a2920.yml
+++ b/.insomnia/Request/req_67969673e4b845b1862cee89ed3a2920.yml
@@ -1,10 +1,10 @@
-_id: req_b427b6a9155a4aaabf79b390f9c44bf6
+_id: req_67969673e4b845b1862cee89ed3a2920
 type: Request
 parentId: fld_9dc4ccf8cea14e948ba34ad9d4d150e9
-modified: 1670789028001
-created: 1669670437783
-url: http://localhost:3000/api/fundings/top
-name: "Get: Top Entries Funding"
+modified: 1670787939820
+created: 1670604364499
+url: http://localhost:3000/api/fundings/flows
+name: "Get: Funding Flows"
 description: ""
 method: GET
 body:
@@ -13,15 +13,11 @@ body:
 parameters:
   - id: pair_9f2cfdf243e743a490085b5a6ff42d9c
     name: fundingType
-    value: "0"
+    value: 0,1
     description: ""
-  - id: pair_cb6f9e5b9a5740bda039e6f1b560ae41
-    name: x
-    value: "15"
-    description: ""
-  - id: pair_f6570c320844453d8e0ef42e5927f96c
-    name: showGroup
-    value: "true"
+  - id: pair_db24af343b644e9abe29272c86b2eedf
+    name: receiver
+    value: OÖ Presseclub
     description: ""
   - id: pair_5c048c7a34744719a51c16d58544167d
     name: from
@@ -31,11 +27,19 @@ parameters:
     name: to
     value: "2022"
     description: ""
+  - id: pair_ff076fa1ebc24ac0915380d2987bcaaa
+    name: receiver
+    value: WirtschaftsBlatt Medien GmbH
+    description: ""
+  - id: pair_171eeca2d4b24940b1d1bdbf121d7c54
+    name: ""
+    value: ""
+    description: ""
 headers:
   - name: Content-Type
     value: multipart/form-data
 authentication: {}
-metaSortKey: -1659713603634.5703
+metaSortKey: -1659713603628.3203
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
