--- a/.insomnia/Request/req_a8375bbc440943f49a1f46dfc55783db.yml
+++ b/.insomnia/Request/req_a8375bbc440943f49a1f46dfc55783db.yml
@@ -1,9 +1,9 @@
 _id: req_a8375bbc440943f49a1f46dfc55783db
 type: Request
 parentId: fld_a638a0ab80c44b918d558c442039049c
-modified: 1672919944046
+modified: 1688567625405
 created: 1669546250591
-url: http://localhost:3000/api/transfers/searchNameshttp://localhost:3000/api/transfers/searchNames
+url: http://localhost:3000/api/transfers/649dee6de974e430cb2521f
 name: "Get: Transfers searchNames"
 description: ""
 method: GET
@@ -15,10 +15,12 @@ parameters:
     name: name
     value: ob
     description: ""
+    disabled: true
   - id: pair_fe191ac508304615b18917a5733f1060
     name: type
     value: org
     description: ""
+    disabled: true
 headers:
   - name: Content-Type
     value: multipart/form-data
