--- a/.insomnia/Request/req_f6dfdeeab33a4fa0a33a7443880d66ab.yml
+++ b/.insomnia/Request/req_f6dfdeeab33a4fa0a33a7443880d66ab.yml
@@ -1,10 +1,10 @@
 _id: req_f6dfdeeab33a4fa0a33a7443880d66ab
 type: Request
 parentId: fld_ee02acdcc9da43e9b2356deeb46b711a
-modified: 1688466111427
+modified: 1688572893101
 created: 1680024863882
 url: http://localhost:3000/api/files/upload
-name: "Post: files/insert"
+name: "Post: files/upload"
 description: ""
 method: POST
 body:
@@ -14,12 +14,17 @@ body:
       value: ""
       id: pair_38f6fc16b2344630b739d1715f4df743
       type: file
-      fileName: F:\Pictures\booba.png
-parameters:
-  - id: pair_b4f04377381044bf9a83be5a5358c580
-    name: name
-    value: testName
-    description: ""
+      fileName: F:\Studium\AIM Master\Inskriptionsbestätigung SS22.pdf
+    - id: pair_000fc3db672145b5b7109bf00e26491d
+      name: name
+      value: Inskriptionsbestätigung
+      description: ""
+      disabled: false
+    - id: pair_910807966d32467d982df3fe28cefe20
+      name: description
+      value: Bestätigung für das Sommersemester 2022
+      description: ""
+parameters: []
 headers:
   - name: Content-Type
     value: multipart/form-data
