--- a/.insomnia/Request/req_34589aa0af2e47119d6d02054497f4f6.yml
+++ b/.insomnia/Request/req_34589aa0af2e47119d6d02054497f4f6.yml
@@ -1,19 +1,21 @@
-_id: req_fb7cd5c018f64ab2aef8b8a68819a102
+_id: req_34589aa0af2e47119d6d02054497f4f6
 type: Request
-parentId: fld_5c5540de84674138a455d79edb8316b3
-modified: 1692173712043
-created: 1668526989878
-url: http://localhost:3000/api/login
+parentId: fld_57ef0184220343cca4e428ae3c58b20c
+modified: 1692191209740
+created: 1692191138527
+url: https://medientransparenz.kub3.fh-joanneum.at/api/login
 name: Login - Admin Role
 description: ""
 method: POST
 body:
   mimeType: application/json
-  text: '{"email":"p.feldgrill@gmail.com","password":"12345678"}'
+  text: '{"email":"test@feldgrill.at","password":"12345678"}'
 parameters: []
 headers:
   - name: Content-Type
     value: application/json
+  - name: User-Agent
+    value: Insomnia/2023.5.2
 authentication: {}
 metaSortKey: -1669551033505.5
 isPrivate: false
