--- a/.insomnia/Request/req_4b58488b862f4b6e8278e89e69aa82a1.yml
+++ b/.insomnia/Request/req_4b58488b862f4b6e8278e89e69aa82a1.yml
@@ -1,21 +1,23 @@
-_id: req_fb7cd5c018f64ab2aef8b8a68819a102
+_id: req_4b58488b862f4b6e8278e89e69aa82a1
 type: Request
 parentId: fld_5c5540de84674138a455d79edb8316b3
-modified: 1692173712043
-created: 1668526989878
+modified: 1692175158803
+created: 1692175150474
 url: http://localhost:3000/api/login
-name: Login - Admin Role
+name: Login - Normal User
 description: ""
 method: POST
 body:
   mimeType: application/json
-  text: '{"email":"p.feldgrill@gmail.com","password":"12345678"}'
+  text: '{"email":"normal@gmail.com","password":"12345678"}'
 parameters: []
 headers:
   - name: Content-Type
     value: application/json
+  - name: User-Agent
+    value: Insomnia/2023.5.2
 authentication: {}
-metaSortKey: -1669551033505.5
+metaSortKey: -1669551033530.5
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
