--- a/.insomnia/Request/req_9d45addc70d448d1a83d1e9415c42c25.yml
+++ b/.insomnia/Request/req_9d45addc70d448d1a83d1e9415c42c25.yml
@@ -1,9 +1,9 @@
-_id: req_d668be4502644233a5f6ba20c5456ca3
+_id: req_9d45addc70d448d1a83d1e9415c42c25
 type: Request
-parentId: fld_ee02acdcc9da43e9b2356deeb46b711a
-modified: 1691842850539
-created: 1688558535027
-url: http://localhost:3000/api/files/renderOne/64d776eed0e03315524b07f5
+parentId: fld_938748f678994171a67bca0fec92d56c
+modified: 1692191085880
+created: 1692191054598
+url: https://medientransparenz.kub3.fh-joanneum.at/api/files/renderOne/64d776eed0e03315524b07f5
 name: "Get: Render One"
 description: ""
 method: GET
