--- a/.insomnia/Request/req_72749479e8dc4edb9021d7ef78574104.yml
+++ b/.insomnia/Request/req_72749479e8dc4edb9021d7ef78574104.yml
@@ -1,17 +1,17 @@
-_id: req_3ff6fbece9e24487bb0273cf8dfc7872
+_id: req_72749479e8dc4edb9021d7ef78574104
 type: Request
-parentId: fld_3ddcc72639df4d948843f1765dbce670
-modified: 1713106217081
-created: 1655409400779
-url: localhost:5011/api/Publication/ListPublications
-name: ListPublications
+parentId: fld_0c8f92e28b0444a3b7f4732c120f0d87
+modified: 1713108120948
+created: 1713106149862
+url: localhost:7051/api/BeerRating/GetAllRatings
+name: ListBeerRankings
 description: ""
 method: GET
 body: {}
 parameters: []
 headers: []
 authentication: {}
-metaSortKey: -1655409590152.5
+metaSortKey: -1713108120923
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
